conversation setting and default reaction

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,11 @@
     />
 
     <!-- create a link for logo -->
-    
+    <meta property="og:title" content="ImaTalk - Let's talk right now!"/>
+    <meta property="og:description" content="ImaTalk is a free messaging app that lets you connect with friends and family"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="thumbnail.jpg"/>
+    <meta property="og:image:alt" content=""/>
     
     <link rel="icon" href="./dsy-logo.png" />
     <!--
